--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="pure-u-1">
                 <p>Built by <a href="http://www.stephenkeable.co.uk">Stephen Keable</a> using <a href="https://postcodes.io">postcodes.io</a></p>
                 <p><a href="https://github.com/stephenkeable/constituency-lookup">GitHub project</a> - <a href="https://github.com/stephenkeable/constituency-lookup/issues">Report any issues here</a></p>
+                <p><a href="https://stephenkeable.github.io/ccg-lookup/">CCG Lookup</a></p>
             </div>
         </div>
 
